index.jsp에 네비게이션 바 추가 	메인화면으로 이동 기능 	소설 카테고리별 리스트 링크 	공지사항 링크 	소설 이름 검색 폼
application.properties 설정 추가
pom.xml 라이브러리 추가
index.jsp 생성
IndexController 생성
NovelCategoryMapper.xml 생성
NovelCategoryMapper.java 생성
NovelCategoryService.java 생성
NovelCategory.java 생성

--- a/wnp/pom.xml
+++ b/wnp/pom.xml
@@ -21,6 +21,28 @@
 
 	<dependencies>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+	
+		<dependency>
+			<groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		 
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-jasper</artifactId>
+		    <version>9.0.12</version>
+		</dependency>
+	
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
